# prr

./: Cargo.toml  NOTES  NOTES.md  README.md  build.rs
.github/workflows/: docs.yml  rust.yml
book/: book.toml
book/src/: README.md  SUMMARY.md  config.md  contributing.md  file_comment.md  install.md  install_binary.md  install_config.md  install_github.md  release.md  review.md  shell_completion.md  tutorial.md  vim.md
book/src/examples/: description_comment.md  file_comment.md  inline_comment.md  prr_directive.md  review_comment.md  snip.md  spanned_inline_comment.md
completions/: _prr
examples/: file_comment.prr  inline_comment.prr  prr_directive.prr  review_comment.prr  snip.prr  spanned_inline_comment.prr
src/: cli.rs  main.rs  parser.rs  prr.rs  review.rs
src/backend/: github.rs  mod.rs
testdata/: add_oneliner  approve_review  back_to_back_span  cross_file_span_ignored  cross_hunk_span  deleted_file  empty_file  file_comment  hunk_start_no_trailing_whitespace  inline_and_review_comments_with_pr_description  multiline_comment  multiple_files  reject_review  review_comment  review_comment_whitespace  review_comments_interleaved_with_pr_description  single_comment  spaces_in_filename  trailing_comment  unknown_directive  unterminated_back_to_back_span  unterminated_span
testdata/review/apply_pr/review/: .1  1.prr
testdata/review/pr_description/: metadata  review
testdata/review/pr_description_interleaving/: review
testdata/review/snip_comments/: gold  review
testdata/review/snip_multiple/: gold  review
testdata/review/snip_single/: metadata  review
testdata/review/status/: metadata  review
testdata/review/trailing_whitespace/: metadata  review
testdata/testgitrepo/: README-applied.md  README.md
vim/: README.md
vim/ftdetect/: prr.vim
vim/ftplugin/: prr.vim
vim/syntax/: prr.vim
