[package]
name = "prr"
description = "Mailing list style code reviews for github"
license-file = "LICENSE"
repository = "https://github.com/danobi/prr"
version = "0.8.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
git2 = "0.15.0"
lazy_static = "1.4"
octocrab = "0.15"
prettytable-rs = "0.9.0"
regex = "1.5"
reqwest = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "3.3.0"
tokio = { version = "1.17", default-features = false, features = ["macros", "rt-multi-thread"] }
toml = "0.5"
xdg = "2.4"

[dev-dependencies]
tempdir = "0.3.0"
