[package]
name = "prr"
description = "Mailing list style code reviews for github"
license-file = "LICENSE"
repository = "https://github.com/danobi/prr"
version = "0.14.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
git2 = "0.18.1"
lazy_static = "1.4"
octocrab = "0.15"
prettytable-rs = "0.10.0"
regex = "1.5"
reqwest = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.17", default-features = false, features = ["macros", "rt-multi-thread"] }
toml = "0.5"
xdg = "2.4"

[dev-dependencies]
pretty_assertions = "1.4.0"
tempfile = "3.8.1"

[features]
# Statically link a vendored copy OpenSSL. OpenSSL is used by all of `git2`, `reqwest` and
# `octocrab`, enabling vendoring for just one of them should be enough.
vendored-openssl = ["git2/vendored-openssl"]
